--- a/package.json
+++ b/package.json
@@ -32,21 +32,33 @@
   "dependencies": {
     "@isaacs/express-prometheus-middleware": "^1.2.1",
     "@prisma/client": "^4.16.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@reach/combobox": "^0.18.0",
     "@remix-run/css-bundle": "^2.8.0",
     "@remix-run/express": "^2.8.0",
     "@remix-run/node": "^2.8.0",
     "@remix-run/react": "^2.8.0",
+    "@types/lodash": "^4.14.202",
     "bcryptjs": "^2.4.3",
     "chokidar": "^3.5.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "cmdk": "^0.2.1",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "isbot": "^3.7.0",
+    "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.344.0",
     "morgan": "^1.10.0",
     "prom-client": "^15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "source-map-support": "^0.5.21",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
@@ -88,8 +100,8 @@
     "msw": "^1.3.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.31",
-    "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.6",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^4.16.2",
     "start-server-and-test": "^2.0.1",
     "tailwindcss": "^3.3.3",
