--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
-    "@reach/combobox": "^0.18.0",
     "@remix-run/css-bundle": "^2.8.0",
     "@remix-run/express": "^2.8.0",
     "@remix-run/node": "^2.8.0",
@@ -70,6 +69,7 @@
     "@types/compression": "^1.7.4",
     "@types/eslint": "^8.44.6",
     "@types/express": "^4.17.20",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/morgan": "^1.9.7",
     "@types/node": "^18.18.6",
     "@types/react": "^18.2.31",
