--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "/postgres-data"
   ],
   "dependencies": {
+    "@epic-web/cachified": "^5.1.2",
     "@isaacs/express-prometheus-middleware": "^1.2.1",
     "@prisma/client": "^4.16.2",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -52,13 +53,16 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.344.0",
     "morgan": "^1.10.0",
+    "next-themes": "^0.3.0",
     "prom-client": "^15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sonner": "^1.4.3",
     "source-map-support": "^0.5.21",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "tiny-invariant": "^1.3.1"
+    "tiny-invariant": "^1.3.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
